fix(a11y): Fixed contrast on light mode, some accesibility text and navigation structure.

--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -1,6 +1,6 @@
 /* Default colours */
 :root {
-    --background-color: #0fa4af;
+    --background-color: #2C7A7B;
     --background-color-secondary:#eee2e2;
     --background-form-color:#2BCDD9;
     --background-form-header-color: #ffffff;
